5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1638_652.log
== TEST (2019-04-23 10:07:12) 
-- CODE:
x = int(input("digite um numero entre 100: "))
xr = x%100

if (n% nr = 0):
	print("SIM")
else: 
	print("NAO")
	
-- ERROR:
File "XXXX", line 4
    if (n% nr = 0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 10:07:23) 
-- CODE:
x = int(input("digite um numero entre 100: "))
xr = x%100

if (n% nr == 0):
	print("SIM")
else: 
	print("NAO")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (n% nr == 0):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 10:07:53) 
-- CODE:
x = int(input("digite um numero entre 100: "))
xr = x%100

if (x% xr == 0):
	print("SIM")
else: 
	print("NAO")
	
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 10:07:58) 
-- CODE:
x = int(input("digite um numero entre 100: "))
xr = x%100

if (x% xr == 0):
	print("SIM")
else: 
	print("NAO")
	
-- EXECUTION TIME:
0.16643
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
